Fix: change the wrong name of field of platforms and improvements were made to the class parameters.